<resources>
    <string name="app_name">Activity 5</string>
    <string name="Login">Log in</string>
    <string name="tEmail">Email</string>
    <string name="tPassword">Password</string>
    <string name="btSignIn">LOGIN</string>
    <string name="todo">TODO</string>
    <string name="tData">Data Anda</string>
    <string name="txemail">Ini hasil Email</string>
    <string name="txpassword">Ini hasil password</string>
    <string name="label2">Login Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Pendaftaran</string>
    <string name="enama">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="epass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="lihatdata">Lihat Data</string>
    <string name="lihatNomor">Lihat Nomor</string>
    <string name="datakontak">Data Kontak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="notel">Nomor Telepon</string>
    <string name="nama">Nama</string>

    <string name="klDaftar">Belum Terdaftar?</string>
</resources>