<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="146dp"
        android:layout_height="100dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.161"
        app:srcCompat="@drawable/user" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="320dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.250" />

//Email
    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textInputLayoutEmail"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.175"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tEmail"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

//Pass

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPass"
        android:layout_width="300dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmail"
        app:layout_constraintVertical_bias="0.0"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/adPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tPassword"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="128dp"
        android:text="@string/btSignIn"
        android:onClick="confirmInput"
        app:backgroundTint="#b490ca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPass"
        app:layout_constraintVertical_bias="0.065" />

    <TextView
        android:id="@+id/txDaftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/klDaftar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSignIn"
        app:layout_constraintVertical_bias="0.149" />




</androidx.constraintlayout.widget.ConstraintLayout>
